--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     ================================================== -->
     <meta charset="utf-8">
     <title>Imokutmfon-abasi Udoh</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Landing Page for Imokutmfon-abasi Udoh">
+    <meta name="author" content="Imokutmfon-abasi Udoh">
 
     <!-- mobile specific metas
     ================================================== -->
@@ -88,13 +88,13 @@
 
                     <div class="column">
                         <div class="text-pretitle with-line">
-                            Hello World
+                            Hello World!
                         </div>
 
                         <h1 class="text-huge-title">
                             I am Imokutmfon-abasi Udoh, <br>
                             a Machine Learning Engineer <br>
-                            & Data Scientiest.
+                            & Data Scientist.
                         </h1>
                     </div>
 
@@ -102,6 +102,7 @@
                         <li><a href="https://www.linkedin.com/in/imokutmfon-abasi-udoh/">Linkedin</a></li>
                         <li><a href="https://x.com/ImokutUdoh">Twitter</a></li>
                         <li><a href="mailto:imokutofficial@gmail.com">Email</a></li>
+                        <li><a href="https://github.com/Imokutmfon">GitHub</a></li>
                     </ul>
 
                 </div> <!-- end intro content -->
@@ -598,17 +599,16 @@
                         <h3 class="text-pretitle">Reach me at</h3>
                         <p class="contact-links">
                             <a href="mailto:imokutofficial@gmail.com" class="mailtoui">imokutofficial@gmail.com</a> <br>
-                            <a href="tel:+1975432345">+197 543 2345</a>
+                            <a href="tel:+2349026520981">+2349026520981</a>
                         </p>
                     </div>
                     <div class="column lg-4 md-5 tab-6 stack-on-550 contact-block">
                         <h3 class="text-pretitle">Social</h3>
                         <ul class="contact-social">
-                            <li><a href="#0">Behance</a></li>
-                            <li><a href="#0">Dribble</a></li>
-                            <li><a href="#0">Twitter</a></li>
-                            <li><a href="#0">Instagram</a></li>
-                            <li><a href="#0">Github</a></li>
+                            <li><a href="https://www.linkedin.com/in/imokutmfon-abasi-udoh/">Linkedin</a></li>
+                            <li><a href="https://x.com/ImokutUdoh">Twitter</a></li>
+                            <li><a href="mailto:imokutofficial@gmail.com">Email</a></li>
+                            <li><a href="https://github.com/Imokutmfon">GitHub</a></li>
                         </ul>
                     </div>
                     <div class="column lg-4 md-12 contact-block">
