--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
                             <li class="folio-list__item column" data-animate-el>
                                 <a class="folio-list__item-link" href="#modal-01">
                                     <div class="folio-list__item-pic">
-                                        <img src="images/portfolio/fuji.jpg"
-                                             srcset="images/portfolio/fuji.jpg 1x, images/portfolio/fuji@2x.jpg 2x"  alt="">
+                                        <img src="images/portfolio/ecg.png"
+                                             srcset="images/portfolio/ecg.png 1x, images/portfolio/ecg@2x.png 2x"  alt="">
                                     </div>
                                     
                                     <div class="folio-list__item-text">
@@ -273,7 +273,7 @@
                     -------------------------------------------- -->
                     <div id="modal-01" hidden>
                         <div class="modal-popup">
-                            <img src="images/portfolio/gallery/g-fuji.jpg" alt="">
+                            <img src="images/portfolio/gallery/g-ecg.jpg" alt="">
                 
                             <div class="modal-popup__desc">
                                 <h5>COVID-19 Prediction using Electrocardiogram(ECG) images</h5>
@@ -346,7 +346,7 @@
 
             <div class="row">
                 <div class="column ss-copyright">
-                    <span>© Copyright Luther 2021</span> 
+                    <span>© Copyright Imokutmfon-abasi Udoh 2025</span> 
                     <span>Design by <a href="https://www.styleshout.com/">StyleShout</a> Distribution By <a href="https://themewagon.com">Themewagon</a></span>
                 </div>
 
