--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                                     
                                     <div class="folio-list__item-text">
                                         <div class="folio-list__item-cat">
-                                            Website
+                                            LLM Chatbot
                                         </div>
                                         <div class="folio-list__item-title">
                                             Pep Talker Chatbot.
@@ -273,7 +273,7 @@
                                     
                                     <div class="folio-list__item-text">
                                         <div class="folio-list__item-cat">
-                                            Website
+                                            Machine Learning model
                                         </div>
                                         <div class="folio-list__item-title">
                                             Covid-19 Prediction.
